--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets\img\icon.png" type="image/x-icon">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
         <title>Viva Mais - Live more and better!</title>
         <link rel="stylesheet" href="assets\css\normalize.css">
         <link rel="stylesheet" href="assets\css\reset.css">
         <link rel="stylesheet" href="assets\css\navigation.css">
         <link rel="stylesheet" href="assets\css\banner.css">
         <link rel="stylesheet" href="assets\css\menu.css">
+        <link rel="stylesheet" href="assets\css\material-symbols.css">
     </head>
     <body>
         <header>
@@ -23,6 +25,7 @@
             <div class="banner">
                 <img class="banner__img" src="assets\img\logo-principal.png" alt="logo principal">           
             </div>
+                <span class="material-symbols-outlined">menu</span>
         </header>
         <main>
             
