estilizando menu burguer

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li class="menu__li"><a class="menu__a" href="#"></a>Campanhas</li>
                         <li class="menu__li"><a class="menu__a" href="#"></a>Notícias</li>
                     </ul>
+                <img class="banner__principal" src="assets\img\alimentos-saudades-funcionais.jpg" alt="alimentos-saudades-funcionais">
         </header>
         <main>
             
