--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="assets\img\icon.png" type="image/x-icon">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
         <title>Viva Mais - Live more and better!</title>
         <link rel="stylesheet" href="assets\css\normalize.css">
         <link rel="stylesheet" href="assets\css\reset.css">
@@ -14,6 +16,8 @@
         <link rel="stylesheet" href="assets\css\banner.css">
         <link rel="stylesheet" href="assets\css\menu.css">
         <link rel="stylesheet" href="assets\css\material-symbols.css">
+        <link rel="stylesheet" href="assets\css\sobre.css">
+        <link rel="stylesheet" href="assets\css\campanhas.css">
     </head>
     <body>
         <header>
@@ -34,8 +38,9 @@
                     </ul>
                 <img class="banner__principal" src="assets\img\alimentos-saudades-funcionais.jpg" alt="alimentos-saudades-funcionais">
         </header>
-        <main>
-            
+        <main class="principal">
+            <h2 class="sobre__titulo">Nossa História:</h2>
+            <p class="sobre__descricao">A Aliança pela Alimentação Adequada e Saudável, lançada oficialmente em outubro de 2016 na cidade de Porto Alegre durante o XXIV Congresso Brasileiro de Nutrição, é uma coalizão que reúne organizações da sociedade civil, associações, coletivos, movimentos sociais, entidades profissionais e pessoas físicas que defendem o interesse público com o objetivo de desenvolver e fortalecer ações coletivas que contribuam para a realização do Direito Humano à Alimentação Adequada (DHAA). Suas ações buscam o avanço de políticas públicas para a garantia da Segurança Alimentar e Nutricional (SAN) e da Soberania Alimentar no Brasil.</p>
         </main>
         <script>
             function clickMenu() {
