adicionando section campanhas

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <main class="principal">
             <h2 class="sobre__titulo">Nossa História:</h2>
             <p class="sobre__descricao">A Aliança pela Alimentação Adequada e Saudável, lançada oficialmente em outubro de 2016 na cidade de Porto Alegre durante o XXIV Congresso Brasileiro de Nutrição, é uma coalizão que reúne organizações da sociedade civil, associações, coletivos, movimentos sociais, entidades profissionais e pessoas físicas que defendem o interesse público com o objetivo de desenvolver e fortalecer ações coletivas que contribuam para a realização do Direito Humano à Alimentação Adequada (DHAA). Suas ações buscam o avanço de políticas públicas para a garantia da Segurança Alimentar e Nutricional (SAN) e da Soberania Alimentar no Brasil.</p>
+                <h3 class="campanhas__titulo">Nossas Campanhas:</h3>
+            <div class="campanhas">
+                    <img class="campanhas__img" src="assets\img\campanha-1.png" alt="campanha-1">
+                    <img class="campanhas__img" src="assets\img\campanha-2.jpg" alt="campanha-2">
+                    <img class="campanhas__img" src="assets\img\campanha-3.jpeg" alt="campanha-3">
+                    <img class="campanhas__img" src="assets\img\campanha-4.jpg" alt="campanha-4">
+    
+            </div>
         </main>
         <script>
             function clickMenu() {
