--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap" rel="stylesheet">
         <title>Viva Mais - Live more and better!</title>
         <link rel="stylesheet" href="assets\css\normalize.css">
@@ -18,6 +19,7 @@
         <link rel="stylesheet" href="assets\css\material-symbols.css">
         <link rel="stylesheet" href="assets\css\sobre.css">
         <link rel="stylesheet" href="assets\css\campanhas.css">
+        <link rel="stylesheet" href="assets\css\noticias.css">
     </head>
     <body>
         <header>
@@ -47,8 +49,17 @@
                     <img class="campanhas__img" src="assets\img\campanha-2.jpg" alt="campanha-2">
                     <img class="campanhas__img" src="assets\img\campanha-3.jpeg" alt="campanha-3">
                     <img class="campanhas__img" src="assets\img\campanha-4.jpg" alt="campanha-4">
-    
             </div>
+            <section class="noticias">
+                <h3 class="noticias__titulo">Notícias sobre alimentos:</h3>
+                <ul class="noticias__ul">
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-01.jpg" alt="noticia-01">
+                        <p class="noticias__manchete">Conferência Popular lança “Proposições e desafios para o Sistema Nacional de Segurança Alimentar e Nutricional”</p>
+                    </li>
+                          
+                </ul>
+            </section>
         </main>
         <script>
             function clickMenu() {
