adicionando section noticias

--- a/index.html
+++ b/index.html
@@ -51,13 +51,32 @@
                     <img class="campanhas__img" src="assets\img\campanha-4.jpg" alt="campanha-4">
             </div>
             <section class="noticias">
-                <h3 class="noticias__titulo">Notícias sobre alimentos:</h3>
+                <h3 class="noticias__titulo">Notícias do Dia:</h3>
                 <ul class="noticias__ul">
                     <li class="noticias__li">
                         <img class="noticias__img" src="assets\img\noticia-01.jpg" alt="noticia-01">
                         <p class="noticias__manchete">Conferência Popular lança “Proposições e desafios para o Sistema Nacional de Segurança Alimentar e Nutricional”</p>
                     </li>
-                          
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-02.jpg" alt="noticia-02">
+                        <p class="noticias__manchete">Gastos de Natal: Brasileiro deve dar prioridade a comida e roupa e pagar dívidas</p>
+                    </li>
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-03.jpg" alt="noticia-03">
+                        <p class="noticias__manchete">Connecting Food resolve desperdício de alimentos em empresas e direciona para quem mais precisa</p>
+                    </li>
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-04.jpg" alt="noticia-04">
+                        <p class="noticias__manchete">Preços da alface, da batata, da cebola e do tomate sobem no atacado em novembro</p>
+                    </li>
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-05.jpg" alt="noticia-05">
+                        <p class="noticias__manchete">Estudo associa consumo de ultraprocessados a 57 mil mortes por ano no País</p>
+                    </li>
+                    <li class="noticias__li">
+                        <img class="noticias__img" src="assets\img\noticia-06.jpg" alt="noticia-06">
+                        <p class="noticias__manchete">GPA (PCAR3): vendas em mesmas lojas crescem 13,3% e somam R$ 11,54 bilhões</p>
+                    </li>
                 </ul>
             </section>
         </main>
