--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
                 </ul>
             </section>
         </main>
-        <script src="assets\script.js"></script>
+        <script src="assets\main.js"></script>
     </body>
 </html>
