alterando propriedades js

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="banner">
                 <img class="banner__img" src="assets\img\logo-principal.png" alt="logo principal">           
             </div>
-                <i class="material-symbols-outlined" onclick="clickMenu()">menu</i>
+                <i class="material-symbols-outlined">menu</i>
                     <ul id="itens" class="menu">
-                        <li onclick="rollPage1()" class="menu__li"><a class="menu__a" href="#"></a>História</li>
-                        <li onclick="rollPage2()" class="menu__li"><a class="menu__a" href="#"></a>Campanhas</li>
-                        <li onclick="rollPage3()" class="menu__li"><a class="menu__a" href="#"></a>Notícias</li>
+                        <li class="menu__li" id="menu__li1"><a class="menu__a" href="#"></a>História</li>
+                        <li class="menu__li" id="menu__li2"><a class="menu__a" href="#"></a>Campanhas</li>
+                        <li class="menu__li" id="menu__li3"><a class="menu__a" href="#"></a>Notícias</li>
                     </ul>
                 <img class="banner__principal" src="assets\img\alimentos-saudades-funcionais.jpg" alt="alimentos-saudades-funcionais">
         </header>
